--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,7 @@ h6 {
 
 #amenities.home-amenities {
     max-height: 100%;
-    background-image: url(../img/baturecep.jpg);
+    background-image: url(../img/baturecep2.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
